Implement 'Rich Embeds' for chat links
- Re-implemented `UrlPreviewResolver` using `WebClient` and regex for basic OpenGraph parsing (title, description, image).
- Updated `ChatMessageController` to display previews for detected URLs using a new `previewContainer` VBox.
- Added `UrlPreviewResolverImplTest` to verify parsing logic.
- Ensured UI updates happen on the FX thread.
- Utilized existing `ChatPrefs.previewImageUrls` property (default true) to toggle this feature.