@@ -1,119 +1,87 @@
 package com.faforever.client.chat;
 
 import com.faforever.client.config.CacheNames;
-import com.faforever.client.i18n.I18n;
-import com.faforever.client.theme.UiService;
-import com.google.common.net.MediaType;
-import javafx.scene.image.Image;
-import javafx.scene.image.ImageView;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.ObjectFactory;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.context.annotation.Lazy;
+import org.springframework.http.MediaType;
 import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Component;
+import org.springframework.web.reactive.function.client.WebClient;
 
-import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-import static com.faforever.commons.io.Bytes.formatSize;
-
-
 @Lazy
 @Component
 @RequiredArgsConstructor
 @Slf4j
-// TODO reintroduce once it's working better
 public class UrlPreviewResolverImpl implements UrlPreviewResolver {
 
-  private static final Pattern IMGUR_PATTERN = Pattern.compile("https?://imgur\\.com/gallery/(\\w+)");
-  private static final String IMGUR_JPG = "http://i.imgur.com/%s.jpg";
-  private static final String IMGUR_PNG = "http://i.imgur.com/%s.png";
-  private static final String IMGUR_GIF = "http://i.imgur.com/%s.gif";
+  private static final Pattern OG_TITLE = Pattern.compile("<meta property=\"og:title\" content=\"(.*?)\"");
+  private static final Pattern OG_DESCRIPTION = Pattern.compile("<meta property=\"og:description\" content=\"(.*?)\"");
+  private static final Pattern OG_IMAGE = Pattern.compile("<meta property=\"og:image\" content=\"(.*?)\"");
+  private static final Pattern TITLE_TAG = Pattern.compile("<title>(.*?)</title>");
 
-  private final UiService uiService;
-
-  private final I18n i18n;
-
-  private static boolean testUrl(String urlString) {
-    try {
-      return ((HttpURLConnection) new URL(urlString).openConnection()).getResponseCode() == HttpURLConnection.HTTP_OK;
-    } catch (IOException e) {
-      return false;
-    }
-  }
+  @Qualifier("userWebClient")
+  private final ObjectFactory<WebClient> userWebClientFactory;
 
   @Override
   @Cacheable(value = CacheNames.URL_PREVIEW, sync = true)
   @Async
-  public CompletableFuture<Optional<Preview>> resolvePreview(String urlString) {
-    String guessedUrl = guessUrl(urlString);
-
+  public CompletableFuture<Optional<PreviewData>> resolvePreview(String urlString) {
     try {
-      URL url = new URL(guessedUrl);
-      String protocol = url.getProtocol();
-
-      if (!"http".equals(protocol) && !"https".equals(protocol)) {
-        log.warn("Unhandled protocol `{}` used to load image {}", protocol, urlString);
+      URI uri = URI.create(urlString);
+      if (!"http".equals(uri.getScheme()) && !"https".equals(uri.getScheme())) {
         return CompletableFuture.completedFuture(Optional.empty());
       }
 
-      HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-      connection.setInstanceFollowRedirects(true);
+      return userWebClientFactory.getObject().get()
+          .uri(uri)
+          .exchangeToMono(response -> {
+            MediaType contentType = response.headers().contentType().orElse(MediaType.APPLICATION_OCTET_STREAM);
+            if (contentType.isCompatibleWith(MediaType.IMAGE_JPEG) || contentType.isCompatibleWith(MediaType.IMAGE_PNG)) {
+              return response.releaseBody().thenReturn(Optional.of(new PreviewData(urlString, null, null)));
+            } else if (contentType.isCompatibleWith(MediaType.TEXT_HTML)) {
+              return response.bodyToMono(String.class).map(html -> parseHtml(html, urlString));
+            } else {
+              return response.releaseBody().thenReturn(Optional.<PreviewData>empty());
+            }
+          })
+          .toFuture();
 
-      long contentLength = connection.getContentLengthLong();
-      String contentType = connection.getContentType();
-
-      ImageView imageView = new ImageView();
-      imageView.setFitHeight(200.0);
-      imageView.setFitWidth(300.0);
-
-      if (MediaType.JPEG.toString().equals(contentType)
-          || MediaType.PNG.toString().equals(contentType)) {
-        imageView.setImage(new Image(guessedUrl));
-      }
-
-      String description = i18n.get("urlPreviewDescription", contentType, formatSize(contentLength, i18n.getUserSpecificLocale()));
-
-      return CompletableFuture.completedFuture(Optional.of(new Preview(imageView, description)));
-    } catch (IOException e) {
-      log.warn("Could not load image from {}", urlString, e);
+    } catch (Exception e) {
+      log.debug("Could not resolve preview for url {}", urlString, e);
       return CompletableFuture.completedFuture(Optional.empty());
     }
   }
 
-  private String guessUrl(String urlString) {
-    Matcher matcher = IMGUR_PATTERN.matcher(urlString);
-    if (matcher.find()) {
-      return guessImgurUrl(urlString, matcher);
+  private Optional<PreviewData> parseHtml(String html, String url) {
+    String title = extract(html, OG_TITLE);
+    if (title == null) {
+      title = extract(html, TITLE_TAG);
+    }
+    String description = extract(html, OG_DESCRIPTION);
+    String image = extract(html, OG_IMAGE);
+
+    if (title == null && image == null) {
+      return Optional.empty();
     }
 
-    return urlString;
+    return Optional.of(new PreviewData(image, title, description));
   }
 
-  private String guessImgurUrl(String urlString, Matcher matcher) {
-    String imageId = matcher.group(1);
-
-    String imgurJpgUrl = String.format(IMGUR_JPG, imageId);
-    if (testUrl(imgurJpgUrl)) {
-      return imgurJpgUrl;
+  private String extract(String html, Pattern pattern) {
+    Matcher matcher = pattern.matcher(html);
+    if (matcher.find()) {
+      return matcher.group(1);
     }
-
-    String imgurPngUrl = String.format(IMGUR_PNG, imageId);
-    if (testUrl(imgurPngUrl)) {
-      return imgurJpgUrl;
-    }
-
-    String imgurGifUrl = String.format(IMGUR_GIF, imageId);
-    if (testUrl(imgurGifUrl)) {
-      return imgurGifUrl;
-    }
-
-    return urlString;
+    return null;
   }
 }
